--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body {
     background-color: #777777;
     border-radius: 2px;
     margin-top: 10%;
-    max-width: 325px;
+    max-width: 275px;
     padding: 1rem;
 }
 
@@ -19,10 +19,23 @@ body {
     background-color: #dcdcdc;
 }
 
+.clear {
+    background-color: #ad2c2d;
+    color: #dcdcdc;
+}
+
+.equals{
+    background-color: #ff6329;
+    color: #dcdcdc;
+}
+
 .total {
     background-color: #a7c2a3;
+    margin-left: 30%;
+    margin-bottom: 5%;
     min-height: 50px;
     min-width: 150px;
+    text-align: right;
 }
 
 .plus {
