--- a/css/main.css
+++ b/css/main.css
@@ -90,22 +90,20 @@ body {
 }
 
 .foot {
-    background-color: rgba(15, 15, 15, .8);
-    margin-bottom: 0;
-    margin-left: 0;
-    width: 100%;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 75px;
-    z-index: 2;
-
+  background-color: rgba(15,15,15, .8);
+  margin-bottom: 0;
+  margin-left: 0;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+  padding: 25px 0 30px 0;
 }
+
 
 .foot p {
     margin-bottom: 0;
-    padding-top: 6px;
     color: #618be1;
 }
 
@@ -117,3 +115,8 @@ body {
     color: #618be1;
 }
 
+@media (max-width: 700px) {
+  .foot p {
+  text-align: center;
+}
+}
